# 2020_NLP100

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ch01/: ch01.ipynb
ch01/00/: 00.py
ch01/01/: 01.py
ch01/02/: 02.py
ch01/03/: 03.py
ch01/04/: 04.py
ch01/05/: 05.py
ch01/06/: 06.py
ch01/07/: 07.py
ch01/08/: 08.py
ch01/09/: 09.py
ch02/: ch02.ipynb
ch02/10/: 10.py
ch02/11/: 11.py
ch02/12/: 12.py
ch02/13/: 13.py
ch02/14/: 14.py
ch02/15/: 15.py
ch02/16/: 16.py
ch02/17/: 17.py
ch02/18/: 18.py
ch02/19/: 19.py
ch03/20/: 20.py
ch03/21/: 21.py
ch03/22/: 22.py
ch03/23/: 23.py
ch03/24/: 24.py
ch03/25/: 25.py
ch03/26/: 26.py
ch04/30/: 30.py
ch04/31/: 31.py
ch04/32/: 32.py
ch04/33/: 33.py
ch04/34/: 34.py
ch04/35/: 35.py  make_list_data.py
ch04/36/: 36.py
ch04/37/: 37.py
ch04/38/: 38.py
ch04/39/: 39.py
ch06/50/: 50.py
ch06/51/: 51.py  51_cntvec.py  51_tfidf.py
ch06/52/: 52.py
ch06/53/: 53.py
ch06/54/: 54.py
ch06/55/: 55.py
ch06/56/: 56.py
ch06/57/: 57.py
ch06/58/: 58.py
ch06/59/: 59_tfidf.py
ch07/: README.md
ch07/60/: 60_getfile.py  60_getvector.py
ch07/61/: 61.py
ch07/62/: 62.py
ch07/63/: 63.py
ch07/64/: 64.py  64_multiprocess.py  64_not_multiprocess.py  tst.py
ch07/65/: 65.py
ch07/66/: 66.py
ch07/67/: 67.py
ch07/68/: 68.py
ch07/69/: 69.py  tst.py
ch08/70/: 70.py
ch08/71/: 71.py
ch08/72/: 72.py
ch08/73/: 73.py
ch08/74/: 74.py
ch08/75/: 75.py
ch08/76/: 76.py
ch08/77/: 77.py
ch09/: 80.py
src/: preprocess.py  util.py
(+56 files in other folders)
