[tool.poetry]
name = "NLP100"
version = "0.1.0"
description = ""
authors = ["sinchir0"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
sklearn = "^0.0"
pandas = "^1.2.4"
ipdb = "^0.13.9"
matplotlib = "^3.4.2"
texthero = "^1.0.9"
gensim = "<=3.8.3"
numpy = "^1.20.3"
requests = "^2.25.1"
tqdm = "^4.61.1"
scipy = "^1.6.3"
adjustText = "^0.7.3"
jedi = "^0.18.0"

[tool.poetry.dev-dependencies]
pysen = {version = "^0.9.1", extras = ["lint"]}
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.9.1"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py37"
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]
